--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
      <div class="card">
-        <img src="png.jpg" alt="" />
-        <img src="png.jpg" alt="" />
-        <img src="png.jpg" alt="" />
-        <img src="png.jpg" alt="" />
+        <img src="card.jpg" alt="" />
+        <img src="card.jpg" alt="" />
+        <img src="card.jpg" alt="" />
+        <img src="card.jpg" alt="" />
      </div>
     </body>
 </html>
